# logtail-rust

./: Cargo.toml  README.md  README:md
.github/: rust-build.yml
.github/workflows/: rust-build.yml
src/: lib.rs
src/http_client/: base_client.rs  mock.rs  mod.rs  service.rs
src/struct/: betterstack_log_schema.rs  env_config.rs  log_level.rs  log_schema.rs  mod.rs
