[package]
name = "logtail-rust"
version = "0.1.2"
edition = "2021"
repository="https://github.com/LuisEvilCo/logtail-rust"
license="Apache-2.0"
description="Logtail http client wrapper"

[dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
tower = "0.4.13"
tower-http = "0.5.2"
reqwest = { version= "0.13.2", features = ["json", "blocking"] }
serde_json = "1.0.117"
