[package]
name = "logtail-rust"
version = "0.3.0"
edition = "2021"
repository="https://github.com/LuisEvilCo/logtail-rust"
license="Apache-2.0"
description="Logtail http client wrapper"

[dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version= "0.13.2", features = ["json", "blocking"] }
serde_json = "1.0.117"
thiserror = "2"

[dependencies.tokio]
version = "1"
features = ["time"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
